tests/transpiler/x/swift/group_by_left_join.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2524844172/025/main.swift:23:63: error: type 'Any' does not conform to protocol 'Hashable'
21 | _list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
22 | for g in _list {
23 |     _res.append(["name": g["key"]!, "count": (((({ var _res: [[Any: Any]] = []
   |                                                               `- error: type 'Any' does not conform to protocol 'Hashable'
24 |     for r in g["items"] as! [[String: Any]] {
25 |         if r["o"]! {

/tmp/TestSwiftTranspiler_VMValid_Golden2524844172/025/main.swift:8:31: warning: forced cast of 'Int' to same type has no effect
 6 | for c in customers {
 7 |     for o in orders {
 8 |         if ((o["customerId"]! as! Int) == (c["id"]! as! Int)) {
   |                               `- warning: forced cast of 'Int' to same type has no effect
 9 |             let _key = c["name"]!
10 |             let _ks = String(describing: _key)

/tmp/TestSwiftTranspiler_VMValid_Golden2524844172/025/main.swift:25:18: error: cannot convert value of type 'Any' to expected condition type 'Bool'
23 |     _res.append(["name": g["key"]!, "count": (((({ var _res: [[Any: Any]] = []
24 |     for r in g["items"] as! [[String: Any]] {
25 |         if r["o"]! {
   |                  `- error: cannot convert value of type 'Any' to expected condition type 'Bool'
26 |             _res.append(r)
27 |         }
