tests/transpiler/x/swift/group_by_left_join.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:25 GMT+7
let customers = [["id": 1, "name": "Alice"], ["id": 2, "name": "Bob"], ["id": 3, "name": "Charlie"]]
let orders = [["id": 100, "customerId": 1], ["id": 101, "customerId": 1], ["id": 102, "customerId": 2]]
let stats = ({ var _groups: [String: [String: Any]] = [:]
var _res: [[String: Any]] = []
for c in customers {
    for o in orders {
        if ((o["customerId"]! as! Int) == (c["id"]! as! Int)) {
            let _key = c["name"]!
            let _ks = String(describing: _key)
            var _g = _groups[_ks] ?? ["key": _key, "items": []]
            var _item: [String: Any] = ["__join__": true]
            _item["c"] = c
            _item["o"] = o
            _g["items"] = (_g["items"] as! [Any]) + [_item]
            _groups[_ks] = _g
        }
    }
}
var _list = Array(_groups.values)
_list.sort { a, b in String(describing: a["key"]) < String(describing: b["key"]) }
for g in _list {
    _res.append(["name": g["key"]!, "count": (((({ var _res: [[Any: Any]] = []
    for r in g["items"] as! [[String: Any]] {
        if r["o"]! {
            _res.append(r)
        }
    }
    return _res })()).count) as! Int)])
}
return _res })()
print("--- Group Left Join ---")
for s in stats {
    print(s["name"]!, "orders:", s["count"]!)
}
